--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="100"
         android:title="隨機"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/setting"
+        android:orderInCategory="101"
+        android:title="設定"
+        app:showAsAction="never" />
 </menu>
